--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
     .grid { display:grid; grid-template-columns:1fr 1fr; gap:8px; margin-top:10px; }
     .role-btn { border:1px solid #001d3d; padding:12px; border-radius:8px; text-align:center; font-weight:bold; cursor:pointer; font-size:11px; background:#f8f9fa; }
     .role-btn.selected { background:#001d3d; color:white; border-color:#d4af37; }
-    #res { margin-top:10px; font-size:14px; white-space:pre-wrap; background:#f9f9f9; padding:15px; border-radius:10px; border-left:5px solid #d4af37; display:none; color:#111; line-height:1.5; font-weight:bold; }
+    
+    /* RESPUESTA EN AZUL PROFESIONAL */
+    #res { 
+        margin-top:10px; 
+        font-size:14px; 
+        white-space:pre-wrap; 
+        background:#f0f7ff; 
+        padding:15px; 
+        border-radius:10px; 
+        border:2px solid #0056b3; 
+        display:none; 
+        color:#003366; 
+        line-height:1.5; 
+        font-weight:bold; 
+    }
+    
     input, textarea { outline:none; border:1px solid #ccc; width:100%; box-sizing:border-box; padding:12px; border-radius:8px; font-family:inherit; }
     .legal-link { position:fixed; bottom:12px; right:12px; font-size:22px; color:#d4af37; text-decoration:none; font-weight:bold; z-index:9999; }
 </style>
