--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartCargo Advisory | MAY ROGA LLC</title>
+    <title>SMARTCARGO ADVISORY BY MAY ROGA LLC</title>
     <style>
-        body { background: #000b1a; font-family: sans-serif; padding:10px; margin:0; }
+        body { background: #000b1a; font-family: sans-serif; padding:10px; margin:0; color: #333; }
         .card { max-width: 500px; margin:auto; background:white; border-radius:20px; padding:20px; border-top:10px solid #d4af37; box-shadow:0 10px 40px rgba(0,0,0,0.5); }
-        .legal-notice { color: #d32f2f; font-size: 10px; font-weight: bold; text-align: center; margin-bottom: 15px; border: 1px solid #d32f2f; padding: 10px; border-radius: 8px; text-transform: uppercase; }
-        .promo-gold { background:#d4af37; color:#000; font-weight:bold; overflow:hidden; white-space:nowrap; padding:8px; font-size:11px; margin-bottom:10px; border-radius:5px; }
-        .btn-main { width:100%; padding:14px; border:none; border-radius:10px; cursor:pointer; font-weight:bold; margin-top:5px; text-transform:uppercase; font-size:12px; }
+        .legal-notice { color: #d32f2f; font-size: 11px; font-weight: bold; text-align: center; margin-bottom: 15px; border: 2px solid #d32f2f; padding: 10px; border-radius: 8px; }
+        
+        /* TÍTULO GRANDE Y AZUL */
+        .brand-title { color: #001d3d; font-size: 22px; font-weight: bold; text-align: center; margin: 10px 0; text-transform: uppercase; }
+        
+        /* PROPAGANDA AZUL MÓVIL */
+        .promo-blue { background: #001d3d; color: #fff; padding: 10px; font-size: 12px; font-weight: bold; border-radius: 5px; margin-bottom: 15px; white-space: nowrap; overflow: hidden; position: relative; }
+        .promo-blue span { display: inline-block; padding-left: 100%; animation: marquee 15s linear infinite; }
+        @keyframes marquee { 0% { transform: translate(0, 0); } 100% { transform: translate(-100%, 0); } }
+
+        .btn-main { width:100%; padding:14px; border:none; border-radius:10px; cursor:pointer; font-weight:bold; margin-top:5px; text-transform:uppercase; }
         .grid { display:grid; grid-template-columns: 1fr 1fr; gap:8px; margin-top:10px; }
-        .role-btn { border:1.5px solid #001d3d; padding:12px; border-radius:8px; text-align:center; font-weight:bold; background:#f8f9fa; cursor:pointer; font-size:10px; }
+        .role-btn { border:1.5px solid #001d3d; padding:12px; border-radius:8px; text-align:center; font-weight:bold; background:#f8f9fa; cursor:pointer; font-size:11px; }
         .role-btn.selected { background:#001d3d; color:white; border-color:#d4af37; }
-        #res { margin-top:15px; background:#f0f7ff; padding:20px; border-radius:10px; border:2px solid #0056b3; display:none; color:#003366; font-weight:bold; white-space:pre-wrap; position:relative;}
+        #res { margin-top:15px; background:#f0f7ff; padding:20px; border-radius:10px; border:2px solid #0056b3; display:none; color:#003366; font-weight:bold; position:relative;}
         .speaker-btn { position:absolute; right:10px; top:10px; background:none; border:none; font-size:24px; cursor:pointer; display:none; }
         input, textarea { width:100%; box-sizing:border-box; padding:12px; border-radius:8px; border:1px solid #ccc; font-size:16px; margin-top:5px; }
     </style>
@@ -21,15 +29,19 @@
 <body>
 <div class="card">
     <div class="legal-notice">
-        PRIVATE ENTITY - NOT IATA, NOT TSA, NOT DOT, NOT GOVERNMENT. 
-        WE ARE STRATEGIC ADVISORS PREVENTING CARGO ERRORS AND INCREASING YOUR CAPITAL.
+        ENTIDAD PRIVADA - NO SOMOS IATA, TSA, DOT NI GOBIERNO. <br>
+        ASESORES ESTRATÉGICOS PREVINIENDO ERRORES Y AUMENTANDO SU CAPITAL.
     </div>
 
-    <div class="promo-gold" id="promoGold">360° STRATEGIC LOGISTICS SOLUTIONS - MAY ROGA LLC</div>
+    <div class="brand-title">SMARTCARGO ADVISORY <br> <span style="font-size: 16px;">BY MAY ROGA LLC</span></div>
 
-    <select id="userLang" onchange="changeLang(this.value)" style="width:100%; padding:12px; font-weight:bold; border:2px solid #001d3d; border-radius:8px;">
-        <option value="en">ENGLISH</option>
+    <div class="promo-blue" id="promoBlue">
+        <span>MITIGAMOS RETENCIONES Y RETORNOS — PENSAMOS POR TU CARGA — SOLUCIONES LOGÍSTICAS 360° — MAY ROGA LLC</span>
+    </div>
+
+    <select id="userLang" onchange="changeLang(this.value)" style="width:100%; padding:10px; font-weight:bold;">
         <option value="es">ESPAÑOL</option>
+        <option value="en">ENGLISH</option>
     </select>
 
     <div id="accessSection">
@@ -39,33 +51,29 @@
             <button class="btn-main" style="background:#0056b3;color:white;" onclick="pay(35)">$35</button>
             <button class="btn-main" style="background:#0056b3;color:white;" onclick="pay(95)">$95</button>
         </div>
-        <input type="text" id="awb" placeholder="REFERENCE / AWB #">
+        <input type="text" id="awb" placeholder="REFERENCIA / AWB #">
         <div class="grid">
-            <input type="text" id="u" placeholder="Admin User">
-            <input type="password" id="p" placeholder="Security Key">
+            <input type="text" id="u" placeholder="Usuario Admin">
+            <input type="password" id="p" placeholder="Clave Maestra">
         </div>
-        <button class="btn-main" style="background:#333;color:white;" onclick="pay(0)">MASTER ACCESS LOGIN</button>
+        <button class="btn-main" style="background:#333;color:white;" onclick="pay(0)">LOGIN ACCESO MAESTRO</button>
     </div>
 
     <div id="mainApp" style="display:none; margin-top:15px;">
-        <div class="grid">
-            <div class="role-btn" onclick="selRole('Trucker',this)">Trucker</div>
+        <div class="grid" id="roleGrid">
+            <div class="role-btn" onclick="selRole('Camionero',this)">Camionero</div>
             <div class="role-btn" onclick="selRole('Forwarder',this)">Forwarder</div>
-            <div class="role-btn" onclick="selRole('Counter',this)">Counter Staff</div>
-            <div class="role-btn" onclick="selRole('Shipper',this)">Shipper/Owner</div>
+            <div class="role-btn" onclick="selRole('Counter',this)">Agente Counter</div>
+            <div class="role-btn" onclick="selRole('Dueño',this)">Dueño/Shipper</div>
         </div>
-        <div style="position:relative; margin-top:10px;">
-            <textarea id="prompt" style="height:100px;" placeholder="Describe the situation..."></textarea>
-            <button onmousedown="startVoice()" onmouseup="stopVoice()" style="position:absolute; right:10px; bottom:10px; border:none; background:none; font-size:24px;">🎤</button>
-        </div>
-        <button class="btn-main" id="btn-get" style="background:#1b5e20; color:white; font-size:16px;" onclick="run()">EXECUTE ADVISORY</button>
+        <textarea id="prompt" style="height:100px; margin-top:10px;" placeholder="Describa la situación técnica..."></textarea>
+        <button class="btn-main" id="btn-get" style="background:#1b5e20; color:white;" onclick="run()">EJECUTAR ASESORÍA</button>
         <div id="res"><button id="speak-btn" class="speaker-btn" onclick="hablar(document.getElementById('res').innerText)">🔊</button></div>
         <div class="grid" style="grid-template-columns: 1fr 1fr 1fr;">
             <button class="btn-main" style="background:#25D366;color:white;" onclick="ws()">WhatsApp</button>
             <button class="btn-main" style="background:#444;color:white;" onclick="email()">Email</button>
-            <button class="btn-main" style="background:#0056b3;color:white;" onclick="window.print()">Print/PDF</button>
+            <button class="btn-main" style="background:#0056b3;color:white;" onclick="window.print()">PDF</button>
         </div>
-        <button class="btn-main" id="btn-new" style="background:#a8071a;color:white;margin-top:10px;" onclick="location.reload()">NEW CONSULTATION</button>
     </div>
 </div>
 <script src="app.js"></script>
